<resources>
    <string name="app_name">ShopKeeper</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="copyright_propergandhi_inc">©Copyright ShopKeeper inc.</string>
    <string name="submit">Submit</string>
    <string name="recovery_email">Recovery Email</string>
    <string name="etforgot_password">Forgot Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_keeper">SHOP<BR></BR>KEEPER</string>
</resources>