<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="320dp">

            <TextView
                android:id="@+id/tvs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/shop_keeper"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/avi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvs"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="99dp"
                android:background="@android:color/black"
                android:padding="10dp"
                android:visibility="gone"
                app:indicatorColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:indicatorName="LineScaleIndicator" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relativeLayout"
            android:orientation="vertical">

            <EditText
                android:id="@+id/logemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittext_border"
                android:drawableEnd="@drawable/email"
                android:drawableRight="@drawable/email"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:text="sanghak119@icloud.com"
                android:textColorHint="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/logpswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                android:inputType="textPassword"
                android:padding="15dp"
                android:text="password123#"
                android:textColorHint="@color/black" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/gilory_bold"
                app:initialCornerAngle="20dp"
                app:spinning_bar_color="@android:color/white"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />


            <TextView
                android:id="@+id/txtforgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:text="@string/forgot_password"
                android:textColor="#0972C5"
                android:textColorLink="#1976D2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="30dp"
                android:fontFamily="serif"
                android:text="@string/copyright_propergandhi_inc"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>


    </RelativeLayout>
</androidx.core.widget.NestedScrollView>